--- a/app/src/main/res/layout/rating_dialog.xml
+++ b/app/src/main/res/layout/rating_dialog.xml
@@ -28,7 +28,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginBottom="10dp"
             style="@style/loginButton"
-            android:text="Submit" />
+            android:text="@string/submit" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/cancel_button"
@@ -38,7 +38,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             style="@style/loginButton"
-            android:text="Cancel" />
+            android:text="@string/cancel" />
 
     </LinearLayout>
 </LinearLayout>
