--- a/app/src/main/res/layout/activity_manage_parts.xml
+++ b/app/src/main/res/layout/activity_manage_parts.xml
@@ -6,20 +6,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ManagePartsActivity">
-<TextView
-    android:id="@+id/categorie"
-     android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    android:text="@string/parts"
-    android:textStyle="bold"
-    android:textSize="35sp"
-    android:paddingStart="52dp"
-    android:paddingTop="27dp"
-    android:textColor="@color/colorPrimaryDark"
-    android:background="@color/colorAccent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/categories"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        android:paddingStart="52dp"
+        android:paddingTop="27dp"
+        android:text="@string/parts"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/back_arrow2"
@@ -27,9 +28,9 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/colorAccent"
         android:src="@drawable/ic_back"
-        app:layout_constraintBottom_toBottomOf="@+id/categorie"
-        app:layout_constraintStart_toStartOf="@id/categorie"
-        app:layout_constraintTop_toTopOf="@id/categorie"
+        app:layout_constraintBottom_toBottomOf="@+id/categories"
+        app:layout_constraintStart_toStartOf="@id/categories"
+        app:layout_constraintTop_toTopOf="@id/categories"
         app:layout_constraintVertical_bias="1.0" />
 
     <ListView
@@ -38,18 +39,19 @@
         android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/categorie" />
+        app:layout_constraintTop_toBottomOf="@+id/categories" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
+        style="@style/FloatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_plus"
         app:fabCustomSize="70dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="16dp"
-        style="@style/FloatingActionButton"
-        android:src="@drawable/ic_plus"
-        android:layout_gravity="bottom|end"/>
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
