--- a/app/src/main/res/layout/fragment_parts.xml
+++ b/app/src/main/res/layout/fragment_parts.xml
@@ -7,25 +7,33 @@
     android:background="@color/colorPrimary"
     tools:context=".PartsFragment">
 
-    <SearchView
-        android:id="@+id/partSearch"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/partsCardSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_background_blue"
         android:layout_margin="10dp"
-        android:queryHint="Search Parts..."
-        android:searchIcon="@drawable/ic_search"
+        android:backgroundTint="@color/themeColor"
+        android:elevation="8dp"
+        android:focusable="true"
+        app:cardCornerRadius="26dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:iconifiedByDefault="false"
-        android:focusable="true"/>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <SearchView
+            android:id="@+id/partsSearch"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:focusable="true"
+            android:iconifiedByDefault="false"
+            android:queryHint="Parts..."
+            android:searchIcon="@drawable/ic_search" />
+    </androidx.cardview.widget.CardView>
 
     <ListView
         android:id="@+id/partsListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@id/partSearch" />
+        app:layout_constraintTop_toBottomOf="@id/partsCardSearch" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
