--- a/app/src/main/res/layout/fragment_scrap_yard.xml
+++ b/app/src/main/res/layout/fragment_scrap_yard.xml
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ScrapYardFragment"
-    android:background="@color/colorPrimary">
-<androidx.cardview.widget.CardView
-    android:id="@+id/cardsearch"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    android:layout_margin="10dp"
-    app:cardCornerRadius="26dp"
-    android:elevation="8dp"
-    android:focusable="true"
-    android:backgroundTint="@color/colorAccent">
-    <SearchView
-        android:id="@+id/scrapYardSearch"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:searchIcon="@drawable/ic_search"
-        android:queryHint="Search Scrap Yards..."
-        android:iconifiedByDefault="false"
-        android:focusable="true"/>
+    android:background="@color/colorPrimary"
+    tools:context=".ScrapYardFragment">
 
-
-</androidx.cardview.widget.CardView>
-    <ListView
+    <androidx.cardview.widget.CardView
+        android:id="@+id/scrapYardCardSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:backgroundTint="@color/themeColor"
+        android:elevation="8dp"
+        android:focusable="true"
+        app:cardCornerRadius="26dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <SearchView
+            android:id="@+id/scrapYardSearch"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:focusable="true"
+            android:iconifiedByDefault="false"
+            android:queryHint="Search Scrap Yards..."
+            android:searchIcon="@drawable/ic_search" />
+    </androidx.cardview.widget.CardView>
+
+    <ListView
         android:id="@+id/scrapYardListView"
-        app:layout_constraintTop_toBottomOf="@id/cardsearch" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/scrapYardCardSearch" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
