--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -15,9 +15,9 @@
         android:paddingStart="52dp"
         android:paddingTop="27dp"
         android:text="@string/settings"
-        android:textStyle="bold"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="35sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,8 +38,9 @@
         style="@style/loginButton"
         android:layout_marginTop="60dp"
         android:width="350dp"
-        android:padding="7dp"
+        android:height="50dp"
         android:drawableStart="@drawable/changepass_icon"
+        android:padding="7dp"
         android:text="@string/change_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,33 +51,35 @@
         style="@style/loginButton"
         android:layout_marginTop="60dp"
         android:width="350dp"
-        android:padding="7dp"
+        android:height="50dp"
         android:drawableStart="@drawable/logout_icon"
+        android:padding="7dp"
         android:text="@string/logout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/reset_pass" />
+
     <TextView
         android:id="@+id/change_lang"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="30dp"
         android:text="@string/language"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="30dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/changel"
-        app:layout_constraintTop_toBottomOf="@id/logout"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logout" />
 
     <Spinner
         android:id="@+id/lang"
-        android:layout_width="200dp"
+        android:layout_width="230dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTint="@color/themeColor"
         android:entries="@array/Lang"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/changel"
         app:layout_constraintStart_toEndOf="@id/change_lang"
         app:layout_constraintTop_toBottomOf="@id/logout" />
@@ -88,11 +91,11 @@
         android:width="30dp"
         android:padding="7dp"
         android:text="@string/save"
+        app:layout_constraintBottom_toTopOf="@id/line"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/change_lang"
-        app:layout_constraintBottom_toTopOf="@id/line"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/change_lang" />
+
     <View
         android:id="@+id/line"
         android:layout_width="0dp"
@@ -102,11 +105,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/changel" />
+
     <TextView
         android:id="@+id/support"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="@dimen/loginViewsMargin"
+        android:layout_marginEnd="30dp"
+        android:gravity="start"
         android:text="@string/help_and_support"
         android:textAlignment="textStart"
         android:textColor="@color/colorPrimaryDark"
@@ -114,6 +121,5 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/line"
-        android:gravity="start"  />
+        app:layout_constraintTop_toBottomOf="@+id/line" />
 </androidx.constraintlayout.widget.ConstraintLayout>
