--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -37,7 +37,9 @@
         android:id="@+id/reset_pass"
         style="@style/loginButton"
         android:layout_marginTop="60dp"
-        android:width="350dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_width="match_parent"
         android:height="50dp"
         android:drawableStart="@drawable/changepass_icon"
         android:padding="7dp"
@@ -50,7 +52,9 @@
         android:id="@+id/logout"
         style="@style/loginButton"
         android:layout_marginTop="60dp"
-        android:width="350dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_width="match_parent"
         android:height="50dp"
         android:drawableStart="@drawable/logout_icon"
         android:padding="7dp"
@@ -75,8 +79,10 @@
 
     <Spinner
         android:id="@+id/lang"
-        android:layout_width="230dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="155dp"
+        android:layout_marginEnd="30dp"
         android:backgroundTint="@color/themeColor"
         android:entries="@array/Lang"
         app:layout_constraintEnd_toEndOf="parent"
