--- a/app/src/main/res/layout/fragment_scrap_yard.xml
+++ b/app/src/main/res/layout/fragment_scrap_yard.xml
@@ -11,7 +11,10 @@
         android:id="@+id/scrapYardCardSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="60dp"
         android:backgroundTint="@color/themeColor"
         android:elevation="8dp"
         android:focusable="true"
@@ -29,6 +32,18 @@
             android:queryHint="Search Scrap Yards..."
             android:searchIcon="@drawable/ic_search" />
     </androidx.cardview.widget.CardView>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/scrapYardFilter"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/scrapYardCardSearch"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/scrapYardListView"
+        android:src="@drawable/ic_filter"/>
 
     <ListView
         android:id="@+id/scrapYardListView"
