--- a/app/src/main/res/layout/fragment_scrap_yard.xml
+++ b/app/src/main/res/layout/fragment_scrap_yard.xml
@@ -39,11 +39,12 @@
         android:id="@+id/scrapYardFilter"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
+        android:background="@drawable/filter_background"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/scrapYardCardSearch"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/scrapYardListView"
-        android:src="@drawable/ic_filter"/>
+        android:src="@drawable/ic_filter" />
 
     <ListView
         android:id="@+id/scrapYardListView"
