--- a/app/src/main/res/layout/row_scrapyard.xml
+++ b/app/src/main/res/layout/row_scrapyard.xml
@@ -100,10 +100,11 @@
             style="@style/circleButton"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="42dp"
             android:layout_marginBottom="10dp"
-            android:drawableLeft="@drawable/star_rate_icon"
+            android:layout_marginEnd="30dp"
+            android:drawableStart="@drawable/star_rate_icon"
             android:text="5/5"
+            app:layout_constraintStart_toEndOf="@id/linear"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/locationScrapYardButton" />
