--- a/app/src/main/res/layout/fragment_scrap_yard.xml
+++ b/app/src/main/res/layout/fragment_scrap_yard.xml
@@ -29,7 +29,7 @@
             android:layout_height="match_parent"
             android:focusable="true"
             android:iconifiedByDefault="false"
-            android:queryHint="Search Scrap Yards..."
+            android:queryHint="@string/search_scrap_yards"
             android:searchIcon="@drawable/ic_search" />
     </androidx.cardview.widget.CardView>
 
