--- a/app/src/main/res/layout/fragment_parts.xml
+++ b/app/src/main/res/layout/fragment_parts.xml
@@ -29,7 +29,7 @@
             android:layout_height="match_parent"
             android:focusable="true"
             android:iconifiedByDefault="false"
-            android:queryHint="@string/searchparts"
+            android:queryHint="@string/searchParts"
             android:searchIcon="@drawable/ic_search" />
     </androidx.cardview.widget.CardView>
 
@@ -45,6 +45,190 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/partsListView"
         android:src="@drawable/ic_filter"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/scrapYardCardFilter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorPrimary"
+        android:elevation="12dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        app:cardCornerRadius="26dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/partsFilter">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/partsFilterText"
+                android:text="@string/filter"
+                android:textSize="30sp"
+                android:textColor="@color/primaryTextColor"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="@dimen/loginViewsMargin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/partsMakeText"
+                android:text="@string/make"
+                android:textSize="20sp"
+                android:textColor="@color/darkTextColor"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:layout_marginStart="@dimen/loginViewsMargin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/partsFilterText"/>
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/partsMakeSpinner"
+                android:layout_marginTop="25dp"
+                android:layout_marginStart="150dp"
+                style="@style/modifiedEditText"
+                app:layout_constraintStart_toEndOf="@id/partsMakeText"
+                app:layout_constraintTop_toBottomOf="@id/partsFilterText"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/partsModelText"
+                android:text="@string/model"
+                android:textSize="20sp"
+                android:textColor="@color/darkTextColor"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:layout_marginStart="@dimen/loginViewsMargin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/partsMakeText"/>
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/partsModelSpinner"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:layout_marginStart="150dp"
+                style="@style/modifiedEditText"
+                app:layout_constraintStart_toEndOf="@id/partsModelText"
+                app:layout_constraintTop_toBottomOf="@id/partsMakeSpinner"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/partsYearText"
+                android:text="@string/year"
+                android:textSize="20sp"
+                android:textColor="@color/darkTextColor"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:layout_marginStart="@dimen/loginViewsMargin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/partsModelText"/>
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/partsYearSpinner"
+                android:layout_marginTop="23dp"
+                android:layout_marginStart="150dp"
+                style="@style/modifiedEditText"
+                app:layout_constraintStart_toEndOf="@id/partsYearText"
+                app:layout_constraintTop_toBottomOf="@id/partsModelSpinner"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/partsCategoryText"
+                android:text="@string/category"
+                android:textSize="20sp"
+                android:textColor="@color/darkTextColor"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:layout_marginStart="@dimen/loginViewsMargin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/partsYearText"/>
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/partsCategorySpinner"
+                android:layout_marginTop="23dp"
+                android:layout_marginStart="150dp"
+                style="@style/modifiedEditText"
+                app:layout_constraintStart_toEndOf="@id/partsCategoryText"
+                app:layout_constraintTop_toBottomOf="@id/partsYearSpinner"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/partsSubCategoryText"
+                android:text="@string/subcategory"
+                android:textSize="20sp"
+                android:textColor="@color/darkTextColor"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:layout_marginStart="@dimen/loginViewsMargin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/partsCategoryText"/>
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/partsSubCategorySpinner"
+                android:layout_marginTop="23dp"
+                android:layout_marginStart="150dp"
+                style="@style/modifiedEditText"
+                app:layout_constraintStart_toEndOf="@id/partsSubCategoryText"
+                app:layout_constraintTop_toBottomOf="@id/partsCategorySpinner"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/partsConditionText"
+                android:text="@string/condition"
+                android:textSize="20sp"
+                android:textColor="@color/darkTextColor"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:layout_marginStart="@dimen/loginViewsMargin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/partsSubCategoryText"/>
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/partsConditionSpinner"
+                android:layout_marginTop="23dp"
+                android:layout_marginStart="150dp"
+                style="@style/modifiedEditText"
+                app:layout_constraintStart_toEndOf="@id/partsConditionText"
+                app:layout_constraintTop_toBottomOf="@id/partsSubCategorySpinner"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/partsNegotiable"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="15dp"
+                android:text="@string/negotiable"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/partsConditionSpinner"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <ListView
         android:id="@+id/partsListView"
