--- a/app/src/main/res/layout/fragment_scrap_yard.xml
+++ b/app/src/main/res/layout/fragment_scrap_yard.xml
@@ -67,26 +67,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/scrapYardFilterText"
+                android:id="@+id/partsFilterText"
                 android:text="@string/filter"
                 android:textSize="30sp"
-                android:textColor="@color/darkTextColor"
+                android:textColor="@color/primaryTextColor"
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="@dimen/loginViewsMargin"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/scrapYardMakeText"
-                android:text="@string/makeFilter"
-                android:textSize="20sp"
-                android:textColor="@color/darkTextColor"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="@dimen/loginViewsMargin"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/scrapYardFilterText"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
